--- a/pagina1.html
+++ b/pagina1.html
@@ -18,23 +18,22 @@
     <h1>
         <center>Nuestros Integrantes</center>
     </h1>
-    <ul>
-        <center>
-            <li>Persona 1</li>
-            <li>Persona 2</li>
-            <li>Persona 3</li>
-        </center>
-    </ul>
+    <center><ul>
+        
+            <li>Persona 1 - Cargo 1</li>
+            <li>Persona 2 - Cargo 2</li>
+            <li>Persona 3 - Cargo 3</li>
+            <li>Persona 3 - Cargo 3</li>
+            <li>Persona n - Cargo n</li>
+       
+    </ul> </center>
     <h1>
         <center>Nuestras secciones de Ayuda</center>
     </h1>
-    <img src="imagenes/Gatopagina_1.jfif" alt="Gato" inline-block>
-    <center>
-        <ul>
-            <li>Perro</li>
-            <li>Gato</li>
-        </ul>
-    </center>
+    <img src="imagenes/Gatopagina_1.jfif" alt="Gato">
+    <a href="Perro"></a>
+    <a href="gato"></a>
+
 </body>
-<!--  "center", "left" y "right" -->
+<!-- align "center", "left" y "right" -->
 </html> 
