ya termine mi parte

--- a/perro.html
+++ b/perro.html
@@ -7,14 +7,17 @@
     <title>Ayuda a un peludo</title>
 </head>
 <body>
+    <a href="file:///C:/Users/Matias/OneDrive/Documentos/GitHub/practica007D/pagina1.html"><h5><center>inicio ></center></h5></a></br>
     <center><h1>PERROS EN ADOPCION</h1></center>
     <center>Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididuntut labore et dolore</center>
     <center>magna aliqua. ut enim ad minim veniam, quis nostrud exercitad ullamco laboris nisi ur aliquip ex ea commodo</center>
     <center>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</center>
     <center>excepteur sint occaecat cupidatat non proidaent, sunt in culpa qui officia deserunt mollit anim id est laborum</center>
-    <center><h1>Nuestros Perros que buscan familia:</h1></center>
-    <img src="perros/perro1.jpg" alt="sin comentario"> file:///C:/Users/cetecom/Documents/GitHub/practica007D/perro1.html
-    <br><img src="perros/perro2.jpg" alt="sin comentario"></br> 
-    <br><img src="perros/perro3.jpg" alt="sin comentario"></br>
+    <center><h1>Nuestros Perros que buscan familia:</h1></center>file:///C:/Users/Matias/OneDrive/Documentos/GitHub/practica007D/pagina1.html
+    <img src="perros/perro1.jpg" align="left"> <a href="file:///C:/Users/Matias/OneDrive/Documentos/GitHub/practica007D/perro1.html"><h2>cachulo</h2></a>
+    <br clear="all">
+    <br> <img src="perros/perro2.jpg" align="left"><a href="file:///C:/Users/Matias/OneDrive/Documentos/GitHub/practica007D/perro2.html"><h2>niña</h2></a></br>
+    <br clear="all"> 
+    <br><img src="perros/perro3.jpg" align="left"><a href="file:///C:/Users/Matias/OneDrive/Documentos/GitHub/practica007D/perro3.html"><h2>flaca</h2></a></br>
 </body>
 </html>
