--- a/perro3.html
+++ b/perro3.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="file:///C:/Users/Matias/OneDrive/Documentos/GitHub/practica007D/perro.html"><h5><center>inicio > Volver a Perros</center></h5></a></br>
-    <img src="perros/perro1.jpg" align="left"> Nombre:cachulo <br>Edad:4</br><br>Genero:macho</br><br>esterielisado:si</br><br>nro.chip:555555555</br> 
+    <img src="perros/perro3.jpg" align="left"> Nombre:flaca <br>Edad:9</br><br>Genero:hembra</br><br>esterielisado:si</br><br>nro.chip:555555698</br> 
 </body>
 </html>
