--- a/gato1.html
+++ b/gato1.html
@@ -7,6 +7,16 @@
     <title>Ayuda a un peludo</title>
 </head>
 <body>
-    
+    <a href="gatos.html"><h5><center>inicio/Voler a Gatos ></center></h5></a></br>
+    <img src="gatos/gato1.jpg" alt="gato">
+    <center><ul>
+        
+        <li>Nombre: Ginger</li>
+        <li>Edad: 2 años</li>
+        <li>Genero: Hembra</li>
+        <li>Esterilizado: Si</li>
+        <li>Nro. chip: 2332244242</li>
+   
+</ul> </center>
 </body>
 </html>
