--- a/pagina1.html
+++ b/pagina1.html
@@ -13,7 +13,7 @@
         <CENTER>ONG - AYUDA A UN PELUDO</CENTER>
     </H1>
     <P>
-        <center>Escritura larga</center>
+        <center> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae numquam exercitationem quaerat quasi eaque quas? Nihil aliquam obcaecati porro accusamus error? Harum perspiciatis sed adipisci! Aspernatur aliquam natus ad ipsa qul officia desorunt molitt anim id est laborum </center>
     </P>
     <h1>
         <center>Nuestros Integrantes</center>
@@ -30,9 +30,11 @@
     <h1>
         <center>Nuestras secciones de Ayuda</center>
     </h1>
-    <img src="imagenes/Gatopagina_1.jfif" alt="Gato">
-    <a href="Perro"></a>
-    <a href="gato"></a>
+    <img src="imagenes/Gatopagina_1.jfif" alt="Gato" aling = "left"> <a href="Gato.html"><h2>Gato</h2></a>
+    <br clear="all">
+    <br><img src="imagenes/pg1.jpg" alt="Perro" aling = "left"><a href="perro.html"><h2>Perro</h2></a> </br>
+    <br clear="all"></br>
+    
 
 </body>
 <!-- align "center", "left" y "right" -->
