--- a/gatos.html
+++ b/gatos.html
@@ -13,8 +13,8 @@
     <center>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</center>
     <center>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</center>
     <center><h1>Nuestros Gatos que buscan familia: </h1></center>
-<br><img src="gatos/gato1.jpg" alt="sin foto"<a href=""</br>
-<br><img src="gatos/gato2.jpg" alt="sin foto"</br>
-<br><img src="gatos/gato3.jpg" alt="sin foto"</br>
+<br><img src="gatos/gato1.jpg" alt="sin foto"><a href="gato1.html"><h2>Ginger</h2></a>
+<br><img src="gatos/gato2.jpg" alt="sin foto"><a href="gato2.html"><h2>Tommy</h2></a>
+<br><img src="gatos/gato3.jpg" alt="sin foto"><a href="gato3.html"><h2>Lucifer</h2></a>
 </body>
 </html>
