--- a/gato2.html
+++ b/gato2.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ayuda a un peludo</title>
 </head>
 <body>
+    <a href="gatos.html"><h5><center>inicio/Volver a Gatos ></center></h5></a></br>
+    <img src="gatos/gato2.jpg" alt="gato">
+    <center><ul>
+        
+        <li>Nombre: Tommy</li>
+        <li>Edad: 3 años</li>
+        <li>Genero: Macho</li>
+        <li>Esterilizado: No</li>
+        <li>Nro. chip: 7235319555</li>
+   
+</ul> </center>
     
 </body>
 </html>
