--- a/gato1.html
+++ b/gato1.html
@@ -7,7 +7,7 @@
     <title>Ayuda a un peludo</title>
 </head>
 <body>
-    <a href="gatos.html"><h5><center>inicio/Voler a Gatos ></center></h5></a></br>
+    <a href="gatos.html"><h5><center>inicio/Volver a Gatos ></center></h5></a></br>
     <img src="gatos/gato1.jpg" alt="gato">
     <center><ul>
         
