--- a/gato3.html
+++ b/gato3.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=S, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ayuda a un peludo</title>
 </head>
 <body>
-    
+    <a href="gatos.html"><h5><center>inicio/Volver a Gatos ></center></h5></a></br>
+    <img src="gatos/gato3.jpg" alt="gato">
+    <center><ul>
+        
+        <li>Nombre: Lucifer</li>
+        <li>Edad: 4 años</li>
+        <li>Genero: Macho</li>
+        <li>Esterilizado: Si</li>
+        <li>Nro. chip: 1123384456</li>
+   
+</ul> </center>
 </body>
 </html>
